--- a/content/index.html
+++ b/content/index.html
@@ -11,6 +11,14 @@
         <script type="text/javascript" src="/tco.js"></script>
         <script type="text/javascript" src="/tmg.js"></script>
         <script type="text/javascript" src="/main.js"></script>
+        <script type="text/javascript" src="/sidebar.js"></script>
+        <script type="text/javascript" src="/list_employees.js"></script>
+        <script type="text/javascript" src="/list_trainings.js"></script>
+        <script type="text/javascript" src="/participation_employees.js"></script>
+        <script type="text/javascript" src="/participation_trainings.js"></script>
+        <script type="text/javascript" src="/evaluation_employees.js"></script>
+        <script type="text/javascript" src="/evaluation_trainings.js"></script>
+        <script type="text/javascript" src="/evaluation_certificates.js"></script>
     </head>
     <body>
         <div id="head-flex-container"></div>
