--- a/content/index.html
+++ b/content/index.html
@@ -19,6 +19,9 @@
         <script type="text/javascript" src="/evaluation_employees.js"></script>
         <script type="text/javascript" src="/evaluation_trainings.js"></script>
         <script type="text/javascript" src="/evaluation_certificates.js"></script>
+        <script type="text/javascript" src="/home.js"></script>
+        <script type="text/javascript" src="/form_employee.js"></script>
+        <script type="text/javascript" src="/show_employee.js"></script>
     </head>
     <body>
         <div id="head-flex-container"></div>
