--- a/content/index.html
+++ b/content/index.html
@@ -22,6 +22,8 @@
         <script type="text/javascript" src="/home.js"></script>
         <script type="text/javascript" src="/form_employee.js"></script>
         <script type="text/javascript" src="/show_employee.js"></script>
+        <script type="text/javascript" src="/form_training.js"></script>
+        <script type="text/javascript" src="/show_training.js"></script>
     </head>
     <body>
         <div id="head-flex-container"></div>
