--- a/content/index.html
+++ b/content/index.html
@@ -24,6 +24,7 @@
         <script type="text/javascript" src="/show_employee.js"></script>
         <script type="text/javascript" src="/form_training.js"></script>
         <script type="text/javascript" src="/show_training.js"></script>
+        <script type="text/javascript" src="/form_qualification.js"></script>
     </head>
     <body>
         <div id="head-flex-container"></div>
