--- a/content/index.html
+++ b/content/index.html
@@ -25,6 +25,9 @@
         <script type="text/javascript" src="/form_training.js"></script>
         <script type="text/javascript" src="/show_training.js"></script>
         <script type="text/javascript" src="/form_qualification.js"></script>
+        <script type="text/javascript" src="/participation_employee.js"></script>
+        <script type="text/javascript" src="/participation_training_finished.js"></script>
+        <script type="text/javascript" src="/participation_training_ongoing.js"></script>
     </head>
     <body>
         <div id="head-flex-container"></div>
