--- a/content/index.html
+++ b/content/index.html
@@ -6,28 +6,28 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
         <link href="/mq.css" rel="stylesheet" type="text/css" />
-        <script type="text/javascript" src="/req.js"></script>
-        <script type="text/javascript" src="/evs.js"></script>
-        <script type="text/javascript" src="/tco.js"></script>
-        <script type="text/javascript" src="/tmg.js"></script>
-        <script type="text/javascript" src="/main.js"></script>
-        <script type="text/javascript" src="/sidebar.js"></script>
-        <script type="text/javascript" src="/list_employees.js"></script>
-        <script type="text/javascript" src="/list_trainings.js"></script>
-        <script type="text/javascript" src="/participation_employees.js"></script>
-        <script type="text/javascript" src="/participation_trainings.js"></script>
-        <script type="text/javascript" src="/evaluation_employees.js"></script>
-        <script type="text/javascript" src="/evaluation_trainings.js"></script>
-        <script type="text/javascript" src="/evaluation_certificates.js"></script>
-        <script type="text/javascript" src="/home.js"></script>
-        <script type="text/javascript" src="/form_employee.js"></script>
-        <script type="text/javascript" src="/show_employee.js"></script>
-        <script type="text/javascript" src="/form_training.js"></script>
-        <script type="text/javascript" src="/show_training.js"></script>
-        <script type="text/javascript" src="/form_qualification.js"></script>
-        <script type="text/javascript" src="/participation_employee.js"></script>
-        <script type="text/javascript" src="/participation_training_finished.js"></script>
-        <script type="text/javascript" src="/participation_training_ongoing.js"></script>
+        <script src="/req.js"></script>
+        <script src="/evs.js"></script>
+        <script src="/tco.js"></script>
+        <script src="/tmg.js"></script>
+        <script src="/main.js"></script>
+        <script src="/sidebar.js"></script>
+        <script src="/list_employees.js"></script>
+        <script src="/list_trainings.js"></script>
+        <script src="/participation_employees.js"></script>
+        <script src="/participation_trainings.js"></script>
+        <script src="/evaluation_employees.js"></script>
+        <script src="/evaluation_trainings.js"></script>
+        <script src="/evaluation_certificates.js"></script>
+        <script src="/home.js"></script>
+        <script src="/form_employee.js"></script>
+        <script src="/show_employee.js"></script>
+        <script src="/form_training.js"></script>
+        <script src="/show_training.js"></script>
+        <script src="/form_qualification.js"></script>
+        <script src="/participation_employee.js"></script>
+        <script src="/participation_training_finished.js"></script>
+        <script src="/participation_training_ongoing.js"></script>
     </head>
     <body>
         <div id="head-flex-container"></div>
